<resources>
    <string name="app_name">Drowsy Driver</string>
    <string name="about_details">
        \t Drivers are most likely to experience drowsiness due to the hours of driving,
        stress, and even workplace issues. The Driver Drowsiness Detection System (DDDS)
        is a tool dedicated especially for drivers who experience drowsiness during working
        hours in the working environment. This device will aid the road traffic accidents caused
        by drowsiness of the driver during working hours and within the working environment.
        With the help of this IoT integrated system, this will allow drivers to avoid road traffic
        accidents because of that it reduces the amount of road traffic accidents that happen every year.
    </string>
    <string name="about_details1">
        \t In this project aims to detect the drowsiness of the driver, specifically eye actions.
        By using a detection system, the project will determine if the driver is in a state of
        drowsiness or micro-sleep. With audio cues and warning messages, the system can make the
        driver alert. It will awaken the spirit of the driver plus it can help the driver decide by
        taking a break
.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="nav_drawer_close">Navigation Drawer Close</string>
    <string name="driverIsDrowsy">Driver is Drowsy</string>
    <string name="driverIsSafe">Driver is Safe</string>

    <string name="menu_bar_desc"> <b>1. Menu</b> - It has 3 components to show</string>
    <string name="home_desc"><b>1.1 Home </b> - This will bring you back to the main screen of the app</string>
    <string name="about_desc"><b>1.2 About</b> - It provides information about the app, including its purpose, features, and developers.</string>
    <string name="app_guide_desc"><b>1.3 App Guide</b> - It offers a step-by-step guide on how to navigate the interface and its features.</string>

    <string name="light_indicator_des"><b>2. Light Indicator</b> - It is the visual representation indicating the current status of the app.</string>
    <string name="red_light_desc"><b>2.1</b> - The red light signifies an alert or warning</string>
    <string name="blue_light_desc"><b>2.2</b> - The blue light signifies no signs of possible accident risks</string>
</resources>